<resources>
    <string name="signin_title">Masukkan nomor HP</string>
    <string name="signin_subtitle">Kamu bisa masuk atau daftar akun.</string>
    <string name="signin_phone">Nomor HP</string>
    <string name="signin_phone_hint">contoh: 81312345678</string>
    <string name="signin_phone_error_min_character">Nomor handphone harus diikuti minimal oleh 8 digit</string>
    <string name="signin_phone_error_format">Kami akan menghubungi Anda di nomor ini</string>
    <string name="signin_email">Alamat Email</string>
    <string name="signin_email_hint">contoh: john@example.org</string>
    <string name="signin_email_error_empty">Email tidak boleh kosong</string>
    <string name="signin_email_error_format">Format email Anda salah. Gunakan format: nama@email.com</string>
    <string name="signin_password">Kata Sandi</string>
    <string name="signin_password_hint">Minimal 8 karakter</string>
    <string name="signin_password_error_min_character">Panjang kata sandi minimal harus 8 karakter</string>
    <string name="signin_forgot_password">Lupa Password?</string>
    <string name="signin_dont_have_account">Belum punya akun?</string>
    <string name="signin_register">Daftar sekarang</string>
    <string name="signin_error_empty_field">Tidak boleh kosong</string>
    <string name="signin_error_min_character">Panjang kata sandi minimal harus 8 karakter</string>
    <string name="signin_error_email_format">Format email tidak benar</string>
    <string name="signin_btn_fingerprint">Masuk dengan Fingerprint</string>
    <string name="signin_call_cs_sure">Lanjutkan untuk menghubungi layanan pelanggan?</string>
    <string name="signin_call_cs_yes">Hubungi</string>
    <string name="signin_call_cs_no">Batal</string>
    <string name="signin_call_number">085222852221</string>
    <string name="signin_finger_title">Autentikasi</string>
    <string name="signin_finger_description">Silahkan login untuk melanjutkan</string>
    <string name="signin_finger_use_app_password">Gunakan password</string>
    <string name="signin_welcome_back">Selamat datang kembali %1$s</string>
    <string name="signin_continue">Lanjutkan</string>
    <string name="otp_title">Verifikasi OTP</string>
    <string name="otp_sub_title">Masukan OTP yang telah dikirimkan</string>
    <string name="otp_to_phone">ke nomor</string>
    <string name="otp_valid_until">Berlaku hingga</string>
    <string name="otp_resend">Kirim ulang kode OTP</string>
    <string name="otp_please_wait">Mohon menunggu untuk kirim ulang OTP</string>
    <string name="otp_submit">Kirim</string>
    <string name="register_title">Complete Profile</string>
    <string name="register_add_avatar">Add Profile Photo</string>
    <string name="register_name">Name</string>
    <string name="register_name_hint">Fill your name</string>
    <string name="register_bio">Bio</string>
    <string name="register_bio_hint">Fill your bio</string>
    <string name="register_email">Email</string>
    <string name="register_email_hint">Enter email address</string>
    <string name="register_phone">Phone Number</string>
    <string name="register_phone_hint">contoh: 81312345678</string>
    <string name="register_continue">Continue</string>
    <string name="country_codes_default_code" translatable="false">+62</string>
</resources>