<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="multi.platform.auth.shared.app.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@color/grey60" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/add_avatar"
                style="@style/Text.Poppins.Body4.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_primary_underline"
                android:paddingBottom="3dp"
                android:text="@string/register_add_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_avatar" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/Text.Poppins.Body2.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/register_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_avatar" />

            <EditText
                android:id="@+id/et_name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:hint="@string/register_name_hint"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:text="@={vm.name}"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_bio"
                style="@style/Text.Poppins.Body2.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/register_bio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <TextView
                android:id="@+id/tv_bio_length"
                style="@style/Text.Poppins.Body3.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@{vm.bio != null ? vm.bio.length() +`/100` : `0/100`}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <EditText
                android:id="@+id/et_bio"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:hint="@string/register_bio_hint"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|textMultiLine"
                android:maxLength="100"
                android:text="@={vm.bio}"
                app:layout_constraintTop_toBottomOf="@id/tv_bio" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/Text.Poppins.Body2.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/register_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_bio" />

            <EditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:hint="@string/register_email_hint"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:text="@={vm.email}"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />

            <TextView
                android:id="@+id/tv_phone"
                style="@style/Text.Poppins.Body2.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/register_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <EditText
                android:id="@+id/et_country"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/country"
                android:drawablePadding="8dp"
                android:enabled="false"
                android:hint="@string/country_codes_default_code"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:text="@={vm.country}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_phone" />

            <EditText
                android:id="@+id/et_phone"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:digits="1234567890"
                android:enabled="false"
                android:hint="@string/register_phone_hint"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:lines="1"
                android:text="@={vm.phone}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/et_country"
                app:layout_constraintTop_toBottomOf="@id/tv_phone" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MaterialButton.Poppins.SolidPrimary.Rounded"
                android:layout_marginTop="24dp"
                android:enabled="@{vm.name != null}"
                android:onClick="@{()->vm.register()}"
                android:text="@string/register_continue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_phone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>