<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="multi.platform.auth.R" />

        <variable
            name="vm"
            type="multi.platform.auth.shared.app.signin.SignInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="@{vm.signInType == `email` ? View.VISIBLE : View.GONE}">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/signin_email"
            android:textColor="@color/bodyText2"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:hint="@string/signin_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:saveEnabled="false"
            android:text="@={vm.email}" />

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{vm.emailError != null ? context.getString(vm.emailError) : ``}"
            android:textColor="@color/negative"
            android:textSize="12sp"
            android:visibility="@{vm.emailError != null ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/signin_password"
            android:textColor="@color/bodyText2"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:hint="@string/signin_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:lines="1"
            android:saveEnabled="false"
            android:text="@={vm.password}" />

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{vm.passwordError != null ? context.getString(vm.passwordError) : ``}"
            android:textColor="@color/negative"
            android:textSize="12sp"
            android:visibility="@{vm.passwordError != null ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:onClick="@{()->vm.goToForgotPassword()}"
            android:text="@string/signin_forgot_password"
            android:textColor="@color/primary"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            style="@style/MaterialButton.Poppins.SolidPrimary.Rounded"
            android:enabled="@{vm.email != null &amp;&amp; vm.phone != null &amp;&amp; vm.emailError == null &amp;&amp; vm.passwordError == null}"
            android:onClick="@{()->vm.signInEmail()}"
            android:text="@string/signin_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordButton" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_dont_have_account"
                android:textColor="@color/bodyText"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:onClick="@{()->vm.goToRegister()}"
                android:text="@string/signin_register"
                android:textColor="@color/primary" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</layout>