<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="multi.platform.auth.R" />

        <variable
            name="vm"
            type="multi.platform.auth.shared.app.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{vm.signInType == `phone` ? View.VISIBLE : View.GONE}">

        <TextView
            android:id="@+id/tv_phone"
            style="@style/Text.Poppins.Body2.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_phone"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_country"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:clickable="false"
            android:drawableStart="@drawable/country"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="@string/country_codes_default_code"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:text="@={vm.country}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:digits="1234567890"
            android:hint="@string/signin_phone_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:lines="1"
            android:text="@={vm.phone}"
            app:layout_constraintLeft_toRightOf="@id/et_country"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <TextView
            android:id="@+id/tvPhoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/Text.Poppins.Body3"
            android:text="@{vm.phoneError != null ? context.getString(vm.phoneError) : ``}"
            android:textColor="@color/negative"
            android:visibility="@{vm.phoneError != null ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />

        <com.google.android.material.button.MaterialButton
            style="@style/MaterialButton.Poppins.SolidPrimary.Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:enabled="@{vm.phone != null &amp;&amp; vm.phoneError == null}"
            android:onClick="@{()->vm.signInPhone()}"
            android:text="@string/signin_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneError" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>